compatible fix for JDK 8~16